<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PLAPP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_photos"><u>NO PHOTOS, PLEASE!</u></string>
    <string name="no_guess"><u>YOU GOT IT WRONG.\n I\'D RATHER CHOOSE FROM A LIST</u></string>
    <string name="next_step">NEXT STEP</string>
    <string name="first_step">First, let\'s see what\n\ you\'ve got in there</string>
    <string name="second_step">Is this your plant?</string>
    <string name="not_a_plant">This does not seem to be a plant…\n\ you tricked us!</string>
    <string name="your_plant_could_be">Here are our guesses:</string>
    <string name="my_plants">MY PLANTS</string>
    <string name="congratulations_to_your_new_green_friend">Congratulations to your new green friend!</string>
    <string name="you_are_nearly_done">You are nearly done!</string>
    <string name="light_and_water">Please make sure your green friend\n gets the right amount of light and water</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="add_plant">ADD PLANT</string>
    <string name="add_plant_to_the_family">Add plant to the family</string>
    <string name="my_plant_tasks">MY PLANT TASKS</string>
    <string name="plant_library">PLANT LIBRARY</string>
    <string name="what_s_its_name">What\'s its name?</string>
    <string name="scientifically_speaking">Scientifically speaking, it is a…</string>
    <string name="nickname">Nickname</string>
    <string name="plant_s_scientific_name">Plant\'s scientific name</string>
    <string name="everybody_knows_it_as">although everybody knows it as…</string>
    <string name="plant_s_common_name">Plant\'s common name</string>
    <string name="how_much_light_does_it_like">How much LIGHT does it like?</string>
    <string name="light">Light</string>
    <string name="what_about_water_needs">What about WATER needs?</string>
    <string name="water">Water</string>
    <string name="your_info">YOUR INFO</string>
    <string name="settings">SETTINGS</string>
    <string name="receive_water_notifications">NOTIFICATIONS</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="welcome_stranger">WELCOME STRANGER</string>
    <string name="plapp">Plapp</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="cultivation">HELP IT GROW!</string>
    <string name="information">GET TO KNOW IT</string>
    <string name="next_watering">WATERING IN</string>
    <string name="days">DAYS</string>
    <string name="my_plant">My plant</string>
    <string name="fab">FAB</string>
    <string name="care">CARE</string>
    <string name="full_shadow">Full shadow</string>
    <string name="partial_shade">Partial shade</string>
    <string name="full_sun">Full sun</string>
    <string name="light_adaptable">Partial sun</string>
    <string name="no_data_available">No data available!</string>
    <string name="your_pending_tasks_for_today">YOUR PENDING TASKS FOR TODAY:</string>
    <string name="yay_today_you_have_no_pending_tasks">YAY! Today you have no pending tasks</string>
    <string name="restore_backup">RESTORE BACKUP</string>
    <string name="no_date_selected_calendar">No date selected</string>
    <string name="these_are_your_pending_tasks_for_today">These are your pending tasks for today:</string>
    <string name="search_by_plant_name">search by plant name…</string>
    <string name="my_plant_is_not_here">MY PLANT IS NOT HERE</string>
    <string name="that_s_my_plant">THAT\'S MY PLANT!</string>
    <string name="you_choose_dialog">You choose!</string>
    <string name="we_need_an_image_to_identify_your_plant">We need an image to identify your plant</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="please_give_your_plant_a_nickname">Please give your plant a nickname</string>
    <string name="plant_has_been_added_to_the_family">Plapp! %1$s has been added to the family :)</string>
    <string name="your_green_friend">Your green friend</string>
    <string name="every_30_days">every 30 days</string>
    <string name="every_15_days">every 15 days</string>
    <string name="every_14_days">every 14 days</string>
    <string name="every_7_days">every 7 days</string>
    <string name="every_5_days">every 5 days</string>
    <string name="every_3_days">every 3 days</string>
    <string name="unknown">unknown</string>
    <string name="full_shade">Full shade</string>
    <string name="partial_sun">Partial sun</string>
    <string name="every_x_days">Every %1$d days</string>
    <string name="no_description_data_available">No description data available!</string>
    <string name="your_plant_info_has_been_updated">Your plant info has been updated</string>
    <string name="please_edit">Please edit</string>
    <string name="it_did_not_survive">It did not survive…</string>
    <string name="it_found_a_new_home">It found a new home</string>
    <string name="i_added_a_wrong_plant">I added the wrong plant</string>
    <string name="no_comment">No comment…</string>
    <string name="can_we_know_why_you_are_deleting_plant">Oh no! Can we know why you are deleting %1$s?</string>
    <string name="delete">Delete</string>
    <string name="welcome_name">WELCOME, %1$s</string>
    <string name="signed_out">Signed out</string>
    <string name="user_deleted">User deleted</string>
    <string name="password_changed">Password changed!</string>
    <string name="input_your_new_password">Input your new password</string>
    <string name="save_new_password">SAVE NEW PASSWORD</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="home">Home</string>
    <string name="my_plants_menu">My Plants</string>
    <string name="calendar">Calendar</string>
    <string name="my_profile_menu">My profile</string>
    <string name="library">Library</string>
</resources>
