<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homePlantFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/PlantLibrary"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/library" />

    <item
        android:id="@+id/myPlantsFragment"
        android:icon="@drawable/ic_flower"
        android:title="@string/my_plants_menu" />
    <item
        android:id="@+id/calendarFragment"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/calendar" />

    <item
        android:id="@+id/myProfileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/my_profile_menu" />

</menu>