<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".addPlant.view.PlantForm2Fragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headerAddPlant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:padding="16dp"
        android:text="@string/add_plant"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTextSecondPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/you_are_nearly_done"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/headerAddPlant" />

    <TextView
        android:id="@+id/tvTextSecondPage2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="32dp"
        android:text="@string/light_and_water"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvTextSecondPage" />

    <LinearLayout
        android:id="@+id/llPlantFormName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextSecondPage2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/how_much_light_does_it_like"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dark" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slLight"
                style="@style/Myslider"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginHorizontal="5dp"
                android:contentDescription="@string/light"
                android:stepSize="1.0"
                android:valueFrom="1.0"
                android:valueTo="4.0"
                app:thumbColor="@color/white"
                app:tickColor="@color/white"
                app:trackColor="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sun"
                app:tint="@color/white" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/what_about_water_needs"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_waterdrop" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slWater"
                style="@style/Myslider"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:contentDescription="@string/water"
                android:stepSize="1.0"
                android:valueFrom="1.0"
                android:valueTo="6.0"
                app:thumbColor="@color/white"
                app:tickColor="@color/white"
                app:trackColor="@color/white" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_waterdrop" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:paddingVertical="15dp"
        android:text="@string/add_plant_to_the_family"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>