<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/buttonBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/first_step" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        app:cardCornerRadius="250dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@id/buttonBarrierBottom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBarrier">

        <ImageView
            android:id="@+id/btnCamera"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:alpha="0.5"
            android:src="@android:drawable/ic_menu_camera"
            app:tint="@color/primary_dark" />

        <ImageView
            android:id="@+id/ivPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic"
             />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/accent"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/buttonBarrierBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_photos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/buttonBarrierBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnStartPlantId" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartPlantId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="15dp"
        android:text="@string/next_step"
        android:backgroundTint="@color/white"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNoPic"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/buttonBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="16dp"
        app:constraint_referenced_ids="tvInstructions" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/buttonBarrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="16dp"
        app:constraint_referenced_ids="cardPreview" />


</androidx.constraintlayout.widget.ConstraintLayout>